style.css
:root {
    --color-primary:  rgb(32, 114, 87);
    --color-primary:  #1F2A24;
    --color-primary:  #28412B;
    --color-bg:rgb(12, 56, 41);
    --color-bg: #28412B;
    --color-bg:rgb(26, 37, 31);
    --color-surface-main:rgb(201, 221, 214);
    --color-surface-main:#F4F1EA;
    --color-surface-main:#EAE5DC;
    --color-text-default: rgb(23, 27, 26);
    --color-text-action: #28412B; 
    --color-surface-action: #28412B; 
    --color-text-on-surface-action: white;
    --color-text-on-primary: white;
    --color-text-on-primary-hover: rgb(231, 205, 205);
    --color-text-on-surface-action-hover: rgb(231, 205, 205);
    --transition: 200ms linear;
    --border-radius-component: 6px;
}

*, ::before, ::after {
    box-sizing: border-box;
    transition: color var(--transition), outline-offset var(--transition);
}

*:focus-visible {
    outline: var(--color-primary) 2px solid;
    outline-offset: 2px;
    box-shadow: 0 0 0 2px var(--color-text-on-primary);
}

a {
    color: var(--color-text-action);
}
html, body {
    margin: 0;
    font-size: 18px;

}
body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-color: var(--color-bg);
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: var(--color-text-default);
    
}

.banner {
    padding: 1rem 0.5rem 0.75rem 0.5rem;
    background-color: var(--color-primary);
    display: flex;
    gap: 1rem;
    flex-direction: column;
    align-items: center;
    color: var(--color-text-on-primary);

     @media only screen and (max-width: 450px) {
     padding: 1rem .25rem; 
    }
}

.logo {
    font-size: 3rem;
    
}

nav {
    display: flex;
    @media only screen and (max-width: 690px) {
        display: none; 
        flex-direction: column;
    }
}

nav.showMenu {
    display: flex;
}

#nav-button {
    @media only screen and (min-width: 690px) {
        display: none; 
    }

}

.banner a {
    color:inherit;
    display: block;
    text-decoration: none;
    
    &:hover {
        color: var(--color-text-on-primary-hover);
    }
}

.banner__decor {
    fill-rule: evenodd;
    clip-rule: evenodd;
    image-rendering: smooth;
    text-rendering: geometricPrecision;
    shape-rendering: geometricPrecision;
    position: absolute;
    width:186px;
    height:198px;

    @media only screen and (max-width: 1160px) {
        display: none;
    }
    
}

.banner__decor--left {
    left: 39px;
    top: 0;
    rotate: 140deg;
}

.banner__decor--right {
    right: 39px;
    top: -17px;
    rotate: -35deg;
}

.nav-link {
    padding: .5rem 1rem;
}

.date-place {
    display: flex;
    gap: .75rem;
    font-size: .875rem;
}

.date-place--separator {
    border-left: 1px solid var(--color-text-on-primary);
}

h1, h2 {
    font-family: "Palatino Linotype", Palatino, serif;
}

h1, h2, h3, h4 {
    margin-block: 0 0.4em;
    padding-top: 0.7em;
}

p {
    margin-block: 0 1em;
}

main {
    min-height: 100%;
    display: flex;
    flex-direction: column;
    position: relative;
    flex: 1;
    width: 52rem;
    margin-inline: auto;
    margin-block: 1rem 2rem;
    border-radius: 1rem;
    padding-inline: 1.5rem;
    background-color: var(--color-surface-main);
    box-shadow: 0 10px 30px rgba(0,0,0,0.15);
    @media only screen and (max-width: 940px) {
        margin-block: 0;
        width: 100%;
        padding-inline: 1rem;
        border-radius: 0;
    }
}

.index-text {
    text-align: center;
}

.index-content {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.image-us {
    width: 540px;
    align-self: center;
    @media only screen and (max-width: 560px) {
        width: 100%;
        margin-inline: -1rem;
    }

}

#countdown {
    font-size: 3rem;
    display: flex;
    gap: 2rem;
    justify-content: center;
    margin: 1rem;
    @media only screen and (max-width: 450px) {
        font-size: 2rem; 
        gap: 1.5rem; 
    }
}

.countdown--label {
    font-size: 1rem;
    
}

button, .button {
    cursor: pointer;
    background-color: var(--color-surface-action);
    border: 1px solid var(--color-surface-action);
    color: var(--color-text-on-surface-action);
    font-family: inherit;
    font-size: 1rem;
    padding: .5rem;
    border-radius: var(--border-radius-component);
    text-decoration: none;
    &:hover {
        color: var(--color-text-on-surface-action-hover);
    }
    &:has(svg) {
        display: flex;
        gap: .25rem;
        align-items: center;
    }
    svg {
        color: inherit;
        stroke-color: inherit;
    }
}

.newsletter-form-group {
    display: flex;
    flex-direction: column;
    gap: .5rem;;
    margin-top: 1rem;
    margin-inline: auto;
    
    @media only screen and (min-width: 500px) {
        width: 20rem;
    }
}

label {
    font-weight: 600;
}

input {
    font-family: inherit;
    font-size: 1rem;
    padding: .5rem;
    border-radius: var(--border-radius-component);
    border: 1px solid var(--color-surface-action);

}

.qr-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    align-self: center;
    border: 1px solid var(--color-bg);
    background-color: white;
    border-radius: var(--border-radius-component);
    padding: 1rem;
    max-width: 20rem;
    margin-block-start: 1rem;

    img {
        width: 100%;
    }
    a {
        font-size: 1.5rem;
    }
}

.main--bottom {
    margin-top: auto;
    padding-block-start: 2rem;
}

.img--blurred-container {
    margin: auto;
    border-radius: 50px;
    margin-block-end: 2rem;
    margin-inline-start: 50%;
    transform: translate(-50%);
    width: 500px;   

    @media only screen and (max-width: 500px) {
     width: 100%;   
    }
}

.img--blurred {
    border-radius: 50px;
    width: 100%;
}

.img--blurred-block {
    width: 100%;
    position: absolute;
    bottom: 0px;
    top: 0px;
    box-shadow: inset 0 0 16px 8px var(--color-surface-main);
    border-radius: 50px;
}

.loader {
    width: 0.95em;
    height: 0.95em;
    border: 4px solid var(--color-text-action);
    border-bottom-color: transparent;
    border-radius: 50%;
    display: inline-block;
    animation: rotation 1s linear infinite;
}

@keyframes rotation {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
} 

